--- a/Backend/.env
+++ b/Backend/.env
@@ -6,4 +6,6 @@ ADMIN_EMAIL='admin@prescripto.com'
 ADMIN_PASSWORD='qwerty123'
 JWT_SECRET="prescripto"
 HTTPS=false
-RAZORPAY_KEY_ID="r"
+RAZORPAY_KEY_ID="rzp_test_sHvciTgXLagghx"
+RAZORPAY_KEY_SECRET="um2q7rA0Q7fyVqXCsJgrggNJ"
+CURRENCY="INR"
