--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,4 @@
 HTTPS=false
 VITE_BACKEND_URL='http://localhost:4000'
+VITE_RAZORPAY_KEY_ID="rzp_test_sHvciTgXLagghx"
+VIT_RAZORPAY_KEY_SECRET="um2q7rA0Q7fyVqXCsJgrggNJ"
